# glfwtst2

./: .gitignore  CMakeLists.txt  readme.md
libs/glad/: glad.c
libs/stb_image/: CMakeLists.txt
src/: CMakeLists.txt  fragment_shader.glsl  glad.h  main.bak.cpp  main.cpp  oglrenderer.cpp  oglrenderer.h  shader_loader.cpp  shader_loader.h  vertex_shader.glsl
